# python-pixi-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
pixi_py/: __init__.py  hello.py
tests/: test_import.py
