[project]
authors = [{name = "Andre Medina", email = "AndreMedina@hotmail.com.au"}]
dependencies = ["black"]
description = "Add a short description here"
name = "pixi_py"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]
tests = "pytest"

[tool.pixi.dependencies]
black = ">=24.10.0,<25"
rich = ">=13.9.3,<14"
pytest = "*"
pre-commit = ">=4.0.1,<5"
