[project]
authors = [{name = "Andre Medina", email = "AndreMedina@hotmail.com.au"}]
description = "Add a short description here"
name = "pixi_py"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]
tests = "pytest"

[tool.pixi.dependencies]
rich = ">=13.9.3,<14"
pytest = "*"
pre-commit = ">=4.0.1,<5"
ipykernel = ">=6.29.5,<7"
